--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,5 +1,5 @@
 config:
-      info: http://config-3344.com:3344/master/config-dev.yml
+      info: http://config-3344.com:3344/master/config-dev.yml version=2
 
 
 
